# rl-agent-for-qubit-array-tuning

./: .gitignore  .modalignore  README.md  arc.slurm  arc.txt  env_arc.slurm  environment.yml  modal_init.py  pyproject.toml  reproduce_paper_figures.sh  requirements.txt  run_modal.py  test_dotenv.slurm
DreamerV3/: infer_large_array.py  infer_ndots.py  inference.py  info.md  make_gifs.py  notes.txt  qarray_2dot_env.py  qarray_2dot_env_v2.py  qarray_4dot_config.yaml  qarray_4dot_env.py  qarray_base_class.py  qarray_config.yaml  qarray_env.py  qarray_env_latent.py  qarray_large_env.py  qarray_ndot_env.py  qarray_ndot_env_v2.py  qdarts_test.py  qdarts_test2.py  qdarts_test_2d.py  qdarts_test_api.py  run.txt
SuperSims/: _timing.py  all_xy_sequence.py  compensation_matrix.py  full_tuning.py  hamiltonian_definitions.py  normalisations.py  parameter_config.json  parameter_config_1d_omegad.json  parameter_config_medium.json  parameter_config_narrow.json  parameter_generation.py  reward.py
Swarm/: integration_example.py
benchmarks/: README.md  benchmark_log.txt  env_init.py  objective.py  plot_results.py  pyproject.toml  run_all_benchmarks.sh  run_all_parallel.sh  run_all_sequential.sh  utils.py
benchmarks/Ablations/: README.md  ablation_metrics.py  env_config.yaml  main.py  plot_graphs.py
benchmarks/Ablations/ablation/: ablation_config.yaml  compute_table.py  run_ablation.py  run_all.sh
benchmarks/MARL/facmac/: env_wrapper.py  grouped_mac.py  multi_gpu_parallel_runner.py  run_eval_trials.py  train.py
benchmarks/MARL/facmac/agents/: plunger_cnn_initbias.py
benchmarks/MARL/facmac/configs/: env_config_full.yaml  env_quantum.yaml  env_quantum_smoke.yaml  facmac_quantum.yaml  facmac_quantum_smoke_grouped.yaml
benchmarks/MARL/facmac/diagnostics/task_2/: reward_trace.txt
benchmarks/MARL/facmac/diagnostics/task_3/: summary.txt
benchmarks/MARL/facmac/diagnostics/task_4/: param_isolation.txt  shape_trace.txt  summary.txt
benchmarks/MARL/facmac/diagnostics/task_4c/: summary.txt
benchmarks/MARL/facmac/diagnostics/task_5/: summary.txt
benchmarks/MARL/facmac/diagnostics/task_6/: summary.txt
benchmarks/MARL/facmac/tests/: task_2_diagnostics.py  task_3_diagnostics.py  task_4_diagnostics.py  task_4c_diagnostics.py  task_5_diagnostics.py  task_6_diagnostics.py
benchmarks/MARL/mappo/: training_config.yaml  training_config_smoke.yaml
benchmarks/MARL/single_agent_ppo/: single_agent_env_config.yaml  train.py  training_config.yaml
benchmarks/MARL/single_agent_ppo/utils/: custom_ppo_learner.py  env_wrapper.py  factory.py  gif_logger.py
benchmarks/MARL/single_agent_sac/: train.py  train_utils.py  training_config.yaml
benchmarks/MARL/single_agent_sac/utils/: factory.py  multiagent_wrapper.py
benchmarks/QADAPT/: debug_compare.py  debug_compare_inference.py  debug_gt_change.py  debug_objective_match.py  debug_single_step.py  observation_builder.py  policy_loader.py  run.py  test_inference.py
benchmarks/bayesian/: run.py
benchmarks/domain/: README.md  convergence_tracker.py  env_init.py  make_table.py  plot_results.py  plot_scaling.py  utils.py
benchmarks/domain/dreamer/: agent.py  ninjax_patch.py  run.py  wrapper.py
benchmarks/domain/dreamer/embodied/jax/: agent.py
benchmarks/domain/dreamer/embodied/run/: parallel.py
benchmarks/domain/lbfgs/: sweep.sh  sweep_basin_hopping.sh
benchmarks/domain/nelder_mead/: make_table.py  run.py  sweep.sh
benchmarks/dreamer/: DreamerEnvWrapper.py  __init__.py  agent.py  configs.yaml  convert_to_json.py  dreamer_env_log.jsonl  dreamer_main_log.jsonl  main.py  rssm.py  run.py  train.py  wrapper.py
benchmarks/dreamer/embodied/jax/: agent.py  opt.py
benchmarks/dreamer/embodied/run/: eval_only.py  parallel.py  train.py  train_eval.py
benchmarks/facmac/: env_wrapper.py  eval_adapter.py  run_eval_trials.py  train.py
benchmarks/facmac/agents/: __init__.py  barrier_cnn.py  barrier_cnn_initbias.py  plunger_cnn.py
benchmarks/facmac/configs/: env_config_full.yaml  env_config_smoke.yaml  env_quantum.yaml
benchmarks/facmac/diagnostics/task_2/: env_info.txt
benchmarks/facmac/diagnostics/task_4/: sentinel_dispatch.txt
benchmarks/facmac/tests/: task_2_diagnostics.py  task_3_diagnostics.py  task_4_diagnostics.py  task_4c_diagnostics.py  task_5_diagnostics.py  task_6_diagnostics.py
benchmarks/lbfgs/: run.py
benchmarks/multi_agent/: inference.py  inference_config.yaml  inspect_checkpoint.py
benchmarks/nelder_mead/: main.py  run.py  utils.py
benchmarks/random/: run.py
benchmarks/single_agent/: networks.py  train.py  training_config.yaml
benchmarks/single_agent/utils/: __init__.py  create_rl_module.py  custom_catalog.py  env_wrapper.py
checkpoints_supersims/: env_config.yaml
checkpoints_supersims_1d_omegad/: training_config.yaml
checkpoints_supersims_1d_omegad_freelogstd/: training_config.yaml
checkpoints_supersims_1d_omegad_pinned/: training_config.yaml
checkpoints_supersims_baseline_l95x330v/: env_config.yaml  training_config.yaml
checkpoints_supersims_grouped/: training_config.yaml
checkpoints_supersims_run2_ujl5jot6/: training_config.yaml
checkpoints_supersims_run3_j9qojxjk_capnotapplied/: env_config.yaml
checkpoints_supersims_run5_mjx6ojvr/: training_config.yaml
checkpoints_supersims_run6_i26ydv9s/: env_config.yaml
checkpoints_supersims_run7_r85rfjs3/: env_config.yaml
modal_scripts/: Modal_README.md  modal_dreamer.py  modal_eval.py  modal_facmac.py  modal_infer.py  modal_inference.py  modal_large_system.py  modal_sac.py  modal_single_agent.py  modal_td3.py  modal_train.py  old.py  sac.py
plots_supersims_diagnostic/: eval_grouped_placeholder.npz  eval_grouped_vs_random_iter28.npz
scripts/: audit_obs_action_ranges.py  diag_ceiling.py  diag_ceiling2.py  diag_ceiling3.py  diagnose_1d_omegad_run.py  eval_grouped_vs_random.py  eval_grouped_vs_zero.py  eval_multi_N.py  eval_rescue_winners.sh  inspect_policy_weights.py  merge_eval_shards.py  per_policy_diagnostic.py  plot_allxy_violins.py  plot_calibration_grid.py  plot_capacitance_convergence.py  plot_convergence_multiN.py  plot_reward_curves.py  (+13 more)
(+386 files in other folders)
